splashscreen center small icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".Main2Activity" />
         <activity android:name=".display2" />
         <activity android:name=".DetailsActivity" />
         <activity android:name=".MyFeeling" />
-        <activity android:name=".loginActivity"></activity>
+        <activity android:name=".loginActivity" />
         <activity
             android:name=".navigationDrawer"
             android:label="@string/title_activity_navigation_drawer"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ViewPagerActivity"></activity>
-        <activity android:name=".mainStart"
+        <activity android:name=".ViewPagerActivity" />
+        <activity
+            android:name=".mainStart"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
