--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 12 10:42:17 NPT 2017
-sdk.dir=/home/queen/Android/Sdk
+#Tue Nov 21 11:36:23 NPT 2017
+sdk.dir=C\:\\Users\\Sikshya\\AppData\\Local\\Android\\Sdk
